--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Vite App</title>
+    <title>Práctica 1 - Asincronismo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
   </head>
   <body>
 
-    <div class="main">
-      <div class="game-container">
-        <h2 id="game-question" class="center flex">Pregunta</h2>
-        <div id="question-options" class="flex">
-          <div class="option">a</div>
-          <div class="option">b</div>
-          <div class="option">c</div>
-          <div class="option">d</div>
-        </div>
-        <div id="results" class="center">
-        </div>
+    <div class="card">
+      <h4 class="card__title">ADVICE #177</h4>
+      <p class="card__text">“It is easy to sit up and take notice, what's difficult is getting up and taking action.”</p>
+      <img src="./assets/images/pattern-divider-desktop.svg" alt="">
+      <div class="card__button">
+        <img src="./assets/images/icon-dice.svg" alt="">
       </div>
     </div>
 
