--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
   <body>
 
     <div class="card">
-      <h4 class="card__title">ADVICE #177</h4>
-      <p class="card__text">“It is easy to sit up and take notice, what's difficult is getting up and taking action.”</p>
-      <img src="./assets/images/pattern-divider-desktop.svg" alt="">
-      <div class="card__button">
+      <h4 class="card__title" id="advice"></h4>
+      <p class="card__text" id="quote"></p>
+      <img id="line" src="./assets/images/pattern-divider-desktop.svg" alt="">
+      <div class="card__button" id="button">
         <img src="./assets/images/icon-dice.svg" alt="">
       </div>
     </div>
